{
  "version": 4,
  "terraform_version": "1.0.11",
  "serial": 21,
  "lineage": "c721bfa0-2fb5-1556-6208-4b7a6c5206ed",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "az_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/f9700497-11d3-4005-8b1d-3bf45a667424/resourceGroups/rg-RoyalBankOfCanadaSatellite/providers/Microsoft.Network/networkInterfaces/rbc1-sat-dvp-nic-0",
            "internal_domain_name_suffix": "jy05ajcap4jubj0ouvhy3mu0na.ux.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "rbc1-sat-dvp-nic-internal",
                "primary": true,
                "private_ip_address": "10.0.1.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/f9700497-11d3-4005-8b1d-3bf45a667424/resourceGroups/rg-RoyalBankOfCanadaSatellite/providers/Microsoft.Network/virtualNetworks/rbc1-sat-dvp-vpc/subnets/rbc1-sat-dvp-subnet"
              }
            ],
            "location": "canadacentral",
            "name": "rbc1-sat-dvp-nic-0",
            "private_ip_address": "10.0.1.5",
            "private_ip_addresses": [
              "10.0.1.5"
            ],
            "resource_group_name": "rg-RoyalBankOfCanadaSatellite",
            "tags": {
              "ibm-satellite": "rbc1-sat-dvp"
            }
          },
          "dependencies": [
            "data.azurerm_resource_group.resource_group",
            "module.vnet.azurerm_subnet.subnet",
            "module.vnet.azurerm_virtual_network.vnet",
            "module.vnet.data.azurerm_resource_group.vnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/f9700497-11d3-4005-8b1d-3bf45a667424/resourceGroups/rg-RoyalBankOfCanadaSatellite/providers/Microsoft.Network/networkInterfaces/rbc1-sat-dvp-nic-1",
            "internal_domain_name_suffix": "jy05ajcap4jubj0ouvhy3mu0na.ux.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "rbc1-sat-dvp-nic-internal",
                "primary": true,
                "private_ip_address": "10.0.1.6",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/f9700497-11d3-4005-8b1d-3bf45a667424/resourceGroups/rg-RoyalBankOfCanadaSatellite/providers/Microsoft.Network/virtualNetworks/rbc1-sat-dvp-vpc/subnets/rbc1-sat-dvp-subnet"
              }
            ],
            "location": "canadacentral",
            "name": "rbc1-sat-dvp-nic-1",
            "private_ip_address": "10.0.1.6",
            "private_ip_addresses": [
              "10.0.1.6"
            ],
            "resource_group_name": "rg-RoyalBankOfCanadaSatellite",
            "tags": {
              "ibm-satellite": "rbc1-sat-dvp"
            }
          },
          "dependencies": [
            "data.azurerm_resource_group.resource_group",
            "module.vnet.azurerm_subnet.subnet",
            "module.vnet.azurerm_virtual_network.vnet",
            "module.vnet.data.azurerm_resource_group.vnet"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/f9700497-11d3-4005-8b1d-3bf45a667424/resourceGroups/rg-RoyalBankOfCanadaSatellite/providers/Microsoft.Network/networkInterfaces/rbc1-sat-dvp-nic-2",
            "internal_domain_name_suffix": "jy05ajcap4jubj0ouvhy3mu0na.ux.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "rbc1-sat-dvp-nic-internal",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/f9700497-11d3-4005-8b1d-3bf45a667424/resourceGroups/rg-RoyalBankOfCanadaSatellite/providers/Microsoft.Network/virtualNetworks/rbc1-sat-dvp-vpc/subnets/rbc1-sat-dvp-subnet"
              }
            ],
            "location": "canadacentral",
            "name": "rbc1-sat-dvp-nic-2",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "rg-RoyalBankOfCanadaSatellite",
            "tags": {
              "ibm-satellite": "rbc1-sat-dvp"
            }
          },
          "dependencies": [
            "data.azurerm_resource_group.resource_group",
            "module.vnet.azurerm_subnet.subnet",
            "module.vnet.azurerm_virtual_network.vnet",
            "module.vnet.data.azurerm_resource_group.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "az_worker_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/f9700497-11d3-4005-8b1d-3bf45a667424/resourceGroups/rg-RoyalBankOfCanadaSatellite/providers/Microsoft.Network/networkInterfaces/rbc1-sat-dvp-worker-nic-worker-0",
            "internal_domain_name_suffix": "jy05ajcap4jubj0ouvhy3mu0na.ux.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "rbc1-sat-dvp-worker-nic-internal",
                "primary": true,
                "private_ip_address": "10.0.2.6",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/f9700497-11d3-4005-8b1d-3bf45a667424/resourceGroups/rg-RoyalBankOfCanadaSatellite/providers/Microsoft.Network/virtualNetworks/rbc1-sat-dvp-vpc/subnets/rbc1-sat-dvp-worker-subnet"
              }
            ],
            "location": "canadacentral",
            "name": "rbc1-sat-dvp-worker-nic-worker-0",
            "private_ip_address": "10.0.2.6",
            "private_ip_addresses": [
              "10.0.2.6"
            ],
            "resource_group_name": "rg-RoyalBankOfCanadaSatellite",
            "tags": {
              "ibm-satellite": "rbc1-sat-dvp-worker"
            }
          },
          "dependencies": [
            "data.azurerm_resource_group.resource_group",
            "module.vnet.azurerm_subnet.subnet",
            "module.vnet.azurerm_virtual_network.vnet",
            "module.vnet.data.azurerm_resource_group.vnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/f9700497-11d3-4005-8b1d-3bf45a667424/resourceGroups/rg-RoyalBankOfCanadaSatellite/providers/Microsoft.Network/networkInterfaces/rbc1-sat-dvp-worker-nic-worker-1",
            "internal_domain_name_suffix": "jy05ajcap4jubj0ouvhy3mu0na.ux.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "rbc1-sat-dvp-worker-nic-internal",
                "primary": true,
                "private_ip_address": "10.0.2.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/f9700497-11d3-4005-8b1d-3bf45a667424/resourceGroups/rg-RoyalBankOfCanadaSatellite/providers/Microsoft.Network/virtualNetworks/rbc1-sat-dvp-vpc/subnets/rbc1-sat-dvp-worker-subnet"
              }
            ],
            "location": "canadacentral",
            "name": "rbc1-sat-dvp-worker-nic-worker-1",
            "private_ip_address": "10.0.2.5",
            "private_ip_addresses": [
              "10.0.2.5"
            ],
            "resource_group_name": "rg-RoyalBankOfCanadaSatellite",
            "tags": {
              "ibm-satellite": "rbc1-sat-dvp-worker"
            }
          },
          "dependencies": [
            "data.azurerm_resource_group.resource_group",
            "module.vnet.azurerm_subnet.subnet",
            "module.vnet.azurerm_virtual_network.vnet",
            "module.vnet.data.azurerm_resource_group.vnet"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/f9700497-11d3-4005-8b1d-3bf45a667424/resourceGroups/rg-RoyalBankOfCanadaSatellite/providers/Microsoft.Network/networkInterfaces/rbc1-sat-dvp-worker-nic-worker-2",
            "internal_domain_name_suffix": "jy05ajcap4jubj0ouvhy3mu0na.ux.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "rbc1-sat-dvp-worker-nic-internal",
                "primary": true,
                "private_ip_address": "10.0.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/f9700497-11d3-4005-8b1d-3bf45a667424/resourceGroups/rg-RoyalBankOfCanadaSatellite/providers/Microsoft.Network/virtualNetworks/rbc1-sat-dvp-vpc/subnets/rbc1-sat-dvp-worker-subnet"
              }
            ],
            "location": "canadacentral",
            "name": "rbc1-sat-dvp-worker-nic-worker-2",
            "private_ip_address": "10.0.2.4",
            "private_ip_addresses": [
              "10.0.2.4"
            ],
            "resource_group_name": "rg-RoyalBankOfCanadaSatellite",
            "tags": {
              "ibm-satellite": "rbc1-sat-dvp-worker"
            }
          },
          "dependencies": [
            "data.azurerm_resource_group.resource_group",
            "module.vnet.azurerm_subnet.subnet",
            "module.vnet.azurerm_virtual_network.vnet",
            "module.vnet.data.azurerm_resource_group.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.network-security-group",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/f9700497-11d3-4005-8b1d-3bf45a667424/resourceGroups/rg-RoyalBankOfCanadaSatellite/providers/Microsoft.Network/networkSecurityGroups/rbc1-sat-dvp-sg",
            "location": "canadacentral",
            "name": "rbc1-sat-dvp-sg",
            "resource_group_name": "rg-RoyalBankOfCanadaSatellite",
            "security_rule": [],
            "tags": {
              "ibm-satellite": "rbc1-sat-dvp"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.azurerm_resource_group.resource_group",
            "module.network-security-group.data.azurerm_resource_group.nsg"
          ]
        }
      ]
    },
    {
      "module": "module.network-security-group",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "custom_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "description-myssh",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "",
            "destination_port_ranges": [
              "22"
            ],
            "direction": "Inbound",
            "id": "/subscriptions/f9700497-11d3-4005-8b1d-3bf45a667424/resourceGroups/rg-RoyalBankOfCanadaSatellite/providers/Microsoft.Network/networkSecurityGroups/rbc1-sat-dvp-sg/securityRules/ssh",
            "name": "ssh",
            "network_security_group_name": "rbc1-sat-dvp-sg",
            "priority": 110,
            "protocol": "tcp",
            "resource_group_name": "rg-RoyalBankOfCanadaSatellite",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.azurerm_resource_group.resource_group",
            "module.network-security-group.azurerm_network_security_group.nsg",
            "module.network-security-group.data.azurerm_resource_group.nsg"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "description-http",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "",
            "destination_port_ranges": [
              "30000-32767",
              "443",
              "80"
            ],
            "direction": "Inbound",
            "id": "/subscriptions/f9700497-11d3-4005-8b1d-3bf45a667424/resourceGroups/rg-RoyalBankOfCanadaSatellite/providers/Microsoft.Network/networkSecurityGroups/rbc1-sat-dvp-sg/securityRules/satellite",
            "name": "satellite",
            "network_security_group_name": "rbc1-sat-dvp-sg",
            "priority": 100,
            "protocol": "*",
            "resource_group_name": "rg-RoyalBankOfCanadaSatellite",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.azurerm_resource_group.resource_group",
            "module.network-security-group.azurerm_network_security_group.nsg",
            "module.network-security-group.data.azurerm_resource_group.nsg"
          ]
        }
      ]
    },
    {
      "module": "module.vnet",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.1.0/24",
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/f9700497-11d3-4005-8b1d-3bf45a667424/resourceGroups/rg-RoyalBankOfCanadaSatellite/providers/Microsoft.Network/virtualNetworks/rbc1-sat-dvp-vpc/subnets/rbc1-sat-dvp-subnet",
            "name": "rbc1-sat-dvp-subnet",
            "resource_group_name": "rg-RoyalBankOfCanadaSatellite",
            "virtual_network_name": "rbc1-sat-dvp-vpc"
          },
          "dependencies": [
            "data.azurerm_resource_group.resource_group",
            "module.vnet.azurerm_virtual_network.vnet",
            "module.vnet.data.azurerm_resource_group.vnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.2.0/24",
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/f9700497-11d3-4005-8b1d-3bf45a667424/resourceGroups/rg-RoyalBankOfCanadaSatellite/providers/Microsoft.Network/virtualNetworks/rbc1-sat-dvp-vpc/subnets/rbc1-sat-dvp-worker-subnet",
            "name": "rbc1-sat-dvp-worker-subnet",
            "resource_group_name": "rg-RoyalBankOfCanadaSatellite",
            "virtual_network_name": "rbc1-sat-dvp-vpc"
          },
          "dependencies": [
            "data.azurerm_resource_group.resource_group",
            "module.vnet.azurerm_virtual_network.vnet",
            "module.vnet.data.azurerm_resource_group.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.vnet",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "rbc1-sat-dvp-subnet",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/f9700497-11d3-4005-8b1d-3bf45a667424/resourceGroups/rg-RoyalBankOfCanadaSatellite/providers/Microsoft.Network/virtualNetworks/rbc1-sat-dvp-vpc/subnets/rbc1-sat-dvp-subnet",
            "network_security_group_id": "/subscriptions/f9700497-11d3-4005-8b1d-3bf45a667424/resourceGroups/rg-RoyalBankOfCanadaSatellite/providers/Microsoft.Network/networkSecurityGroups/rbc1-sat-dvp-sg",
            "subnet_id": "/subscriptions/f9700497-11d3-4005-8b1d-3bf45a667424/resourceGroups/rg-RoyalBankOfCanadaSatellite/providers/Microsoft.Network/virtualNetworks/rbc1-sat-dvp-vpc/subnets/rbc1-sat-dvp-subnet"
          },
          "dependencies": [
            "data.azurerm_resource_group.resource_group",
            "module.network-security-group.azurerm_network_security_group.nsg",
            "module.network-security-group.data.azurerm_resource_group.nsg",
            "module.vnet.azurerm_subnet.subnet",
            "module.vnet.azurerm_virtual_network.vnet",
            "module.vnet.data.azurerm_resource_group.vnet"
          ]
        },
        {
          "index_key": "rbc1-sat-dvp-worker-subnet",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/f9700497-11d3-4005-8b1d-3bf45a667424/resourceGroups/rg-RoyalBankOfCanadaSatellite/providers/Microsoft.Network/virtualNetworks/rbc1-sat-dvp-vpc/subnets/rbc1-sat-dvp-worker-subnet",
            "network_security_group_id": "/subscriptions/f9700497-11d3-4005-8b1d-3bf45a667424/resourceGroups/rg-RoyalBankOfCanadaSatellite/providers/Microsoft.Network/networkSecurityGroups/rbc1-sat-dvp-sg",
            "subnet_id": "/subscriptions/f9700497-11d3-4005-8b1d-3bf45a667424/resourceGroups/rg-RoyalBankOfCanadaSatellite/providers/Microsoft.Network/virtualNetworks/rbc1-sat-dvp-vpc/subnets/rbc1-sat-dvp-worker-subnet"
          },
          "dependencies": [
            "data.azurerm_resource_group.resource_group",
            "module.network-security-group.azurerm_network_security_group.nsg",
            "module.network-security-group.data.azurerm_resource_group.nsg",
            "module.vnet.azurerm_subnet.subnet",
            "module.vnet.azurerm_virtual_network.vnet",
            "module.vnet.data.azurerm_resource_group.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.vnet",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "24f0354e-7f40-4093-a74e-a54f8eb29a68",
            "id": "/subscriptions/f9700497-11d3-4005-8b1d-3bf45a667424/resourceGroups/rg-RoyalBankOfCanadaSatellite/providers/Microsoft.Network/virtualNetworks/rbc1-sat-dvp-vpc",
            "location": "canadacentral",
            "name": "rbc1-sat-dvp-vpc",
            "resource_group_name": "rg-RoyalBankOfCanadaSatellite",
            "tags": {
              "ibm-satellite": "rbc1-sat-dvp"
            },
            "vm_protection_enabled": false
          },
          "dependencies": [
            "data.azurerm_resource_group.resource_group",
            "module.vnet.data.azurerm_resource_group.vnet"
          ]
        }
      ]
    }
  ]
}